Resolvendo problema de barra de rolagem com overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,6 +49,10 @@ ul {
   list-style: none;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: var(--color-white);
   color: var(--color-blue-text);
